# MCPGex

./: README.md  example_usage.py  pyproject.toml  server.py
src/mcpgex/: server.py
tests/: test_server.py
